--- a/ElmaSecondTry/Views/User/ShowUser.cshtml
+++ b/ElmaSecondTry/Views/User/ShowUser.cshtml
@@ -55,9 +55,13 @@
         <dd>
             @Html.DisplayFor(model => model.RegisterDate)
         </dd>
-        <div>
-            @Html.ActionLink("Редактировать данные пользователя", "EditUser", "User", new { id = Model.Id }, null)
+
+        <div class="form-group">
+            @Html.ActionLink("Редактировать данные пользователя", "EditUser", "User", new { id = Model.Id }, new { @class = "control-label col-md-11" })
+            @Html.ActionLink("Удалить", "EditUser", "User", new { id = Model.Id }, new { @class = "control-label col-md-1" })
         </div>
+
+
     </dl>
 </div>
 
