--- a/ElmaSecondTry/Views/Account/Authorization.cshtml
+++ b/ElmaSecondTry/Views/Account/Authorization.cshtml
@@ -31,8 +31,11 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-offset-2 col-md-1">
                 <input type="submit" value="Авторизоваться" class="btn btn-success" />
+            </div>
+            <div class="col-md-offset-1 col-md-1">
+                <input type="reset" value="Очистить форму" class="btn btn-info" />
             </div>
         </div>
     </div>
