--- a/ElmaSecondTry/Views/Account/EditAccount.cshtml
+++ b/ElmaSecondTry/Views/Account/EditAccount.cshtml
@@ -43,8 +43,11 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-offset-2 col-md-1">
                 <input type="submit" value="Сохранить" class="btn btn-success" />
+            </div>
+            <div class="col-md-offset-1 col-md-1">
+                <input type="reset" value="Очистить форму" class="btn btn-info" />
             </div>
         </div>
 
