--- a/ElmaSecondTry/Views/Announcement/ListAnnouncement.cshtml
+++ b/ElmaSecondTry/Views/Announcement/ListAnnouncement.cshtml
@@ -35,89 +35,56 @@
 
                     @foreach (var item in Model)
                     {
-                        <tr>
-
-                            @if (item is ElmaSecondTry.Models.CandidateModel.MyCandidate)
+                    <tr>
+                        <td>@Html.DisplayFor(modelItem => item.Type)</td>
+                        <td>@item.CreationDate.ToString("dd.MM.yyyy HH:mm")</td>
+                        <td>@item.OwnerLogin</td>
+                        @if (item is ElmaSecondTry.Models.CandidateModel.MyCandidate)
+                        {
+                            var candidateItem = (ElmaSecondTry.Models.CandidateModel.MyCandidate)item;
+                            <td>@candidateItem.FirstName</td>
+                            <td>@candidateItem.Profession</td>
+                            <td>---нет---</td>
+                            <td>---нет---</td>
+                        }
+                        @if (item is ElmaSecondTry.Models.VacancyModel.MyVacancy)
+                        {
+                            var vacancyItem = (ElmaSecondTry.Models.VacancyModel.MyVacancy)item;
+                            <td>---нет---</td>
+                            <td>---нет---</td>
+                            <td>@vacancyItem.Name</td>
+                            <td>@vacancyItem.Salary</td>
+                        }
+                        <td>
+                            <a href="@Url.Action("ShowAnnouncement", "Announcement", new { id = item.Id })" style="margin-left:5px">
+                                <img src="~/Images/black-strong/Details.png" width="20" title="Посмотреть данные объявления @item.Type @item.OwnerLogin от @item.CreationDate" />
+                            </a>
+                            @if (User.Identity.Name == item.OwnerLogin || User.IsInRole("Admin"))
                             {
-                                <td>@Html.DisplayFor(modelItem => item.Type)</td>
-                                var candidateItem = (ElmaSecondTry.Models.CandidateModel.MyCandidate)item;
-                                <td>@candidateItem.CreationDate.ToString("dd.MM.yyyy HH:mm")</td>
-                                <td>@candidateItem.OwnerLogin</td>
-                                <td>@candidateItem.FirstName</td>
-                                <td>@candidateItem.Profession</td>
-                                <td>---нет---</td>
-                                <td>---нет---</td>
-                                <td>
-                                    <a href="@Url.Action("ShowCandidate", "Candidate", new { id = item.Id })" style="margin-left:5px">
-                                        <img src="~/Images/black-strong/Details.png" width="20" title="Посмотреть данные объявления @item.Type @candidateItem.OwnerLogin от @candidateItem.CreationDate" />
-                                    </a>
-                                    @if (User.Identity.Name == candidateItem.OwnerLogin || User.IsInRole("Admin"))
-                                    {
-                                        <a href="@Url.Action("EditCandidate", "Candidate", new { id = item.Id })" style="margin-left:5px">
-                                            <img src="~/Images/black-strong/Edit.png" width="20" title="Редактировать данные объявления @item.Type @candidateItem.OwnerLogin от @candidateItem.CreationDate" />
-                                        </a>
-                                        <a href='@Url.Action("DeleteAnnouncement", "Announcement", new { id = item.Id, login = candidateItem.OwnerLogin })' style="margin-left:5px" onclick="return confirm('Вы уверены что желаете удалить объявление @item.Type от @candidateItem.CreationDate пользователя @candidateItem.OwnerLogin')">
-                                            <img src="~/Images/black-strong/Delete.png" width="20" title="Удальть объявление @item.Type @candidateItem.OwnerLogin от @candidateItem.CreationDate" />
-                                        </a>
-                                    }
-                                    @if (User.IsInRole("Admin"))
-                                    {
-                                        if (!item.IsBlocked)
-                                        {
-                                            <a href='@Url.Action("BlockAnnouncement", "Announcement", new { id = item.Id, block = true })' style="margin-left:5px" onclick="return confirm('Вы уверены что желаете заблокировать объявление @item.Type от @candidateItem.CreationDate пользователя @candidateItem.OwnerLogin ?')">
-                                                <img src="~/Images/black-strong/Cancel.png" width="20" title="Заблокировать объявление @item.Type @candidateItem.OwnerLogin от @candidateItem.CreationDate" />
-                                            </a>
-                                        }
-                                        else
-                                        {
-                                            <a href='@Url.Action("BlockAnnouncement", "Announcement", new { id = item.Id, block = false })' style="margin-left:5px" onclick="return confirm('Вы уверены что желаете разблокировать объявление @item.Type от @candidateItem.CreationDate пользователя @candidateItem.OwnerLogin ?')">
-                                                <img src="~/Images/black-strong/Ok.png" width="20" title="Разблокировать объявление @item.Type @candidateItem.OwnerLogin от @candidateItem.CreationDate" />
-                                            </a>
-                                        }
-                                    }
-                                    </td>
+                                <a href="@Url.Action($"Edit{item.Type.ToString()}", item.Type.ToString(), new { id = item.Id })" style="margin-left:5px">
+                                    <img src="~/Images/black-strong/Edit.png" width="20" title="Редактировать данные объявления @item.Type @item.OwnerLogin от @item.CreationDate" />
+                                </a>
+                                <a href='@Url.Action("DeleteAnnouncement", "Announcement", new { id = item.Id, login = item.OwnerLogin })' style="margin-left:5px" onclick="return confirm('Вы уверены что желаете удалить объявление @item.Type от @item.CreationDate пользователя @item.OwnerLogin')">
+                                    <img src="~/Images/black-strong/Delete.png" width="20" title="Удальть объявление @item.Type @item.OwnerLogin от @item.CreationDate" />
+                                </a>
                             }
-                            @if (item is ElmaSecondTry.Models.VacancyModel.MyVacancy)
+                            @if (User.IsInRole("Admin"))
                             {
-                                <td>@Html.DisplayFor(modelItem => item.Type)</td>
-                                var vacancyItem = (ElmaSecondTry.Models.VacancyModel.MyVacancy)item;
-                                <td>@vacancyItem.CreationDate.ToString("dd.MM.yyyy HH:mm")</td>
-                                <td>@vacancyItem.OwnerLogin</td>
-                                <td>---нет---</td>
-                                <td>---нет---</td>
-                                <td>@vacancyItem.Name</td>
-                                <td>@vacancyItem.Salary</td>
-                                <td>
-                                    <a href="@Url.Action("ShowVacancy", "Vacancy", new { id = item.Id })" style="margin-left:5px">
-                                        <img src="~/Images/black-strong/Details.png" width="20" title="Посмотреть данные объяявления @item.Type @vacancyItem.OwnerLogin от @vacancyItem.CreationDate" />
+                                if (!item.IsBlocked)
+                                {
+                                    <a href='@Url.Action("BlockAnnouncement", "Announcement", new { id = item.Id, block = true })' style="margin-left:5px" onclick="return confirm('Вы уверены что желаете заблокировать объявление @item.Type от @item.CreationDate пользователя @item.OwnerLogin ?')">
+                                        <img src="~/Images/black-strong/Cancel.png" width="20" title="Заблокировать объявление @item.Type @item.OwnerLogin от @item.CreationDate" />
                                     </a>
-                                    @if (User.Identity.Name == vacancyItem.OwnerLogin || User.IsInRole("Admin"))
-                                    {
-                                        <a href="@Url.Action("EditVacancy", "Vacancy", new { id = item.Id })" style="margin-left:5px">
-                                            <img src="~/Images/black-strong/Edit.png" width="20" title="Редактировать данные объявления @item.Type @vacancyItem.OwnerLogin от @vacancyItem.CreationDate" />
-                                        </a>
-                                        <a href='@Url.Action("DeleteAnnouncement", "Announcement", new { id = item.Id, login = vacancyItem.OwnerLogin })' style="margin-left:5px" onclick="return confirm('Вы уверены что желаете удалить объявление @item.Type от @vacancyItem.CreationDate пользователя @vacancyItem.OwnerLogin ?')">
-                                            <img src="~/Images/black-strong/Delete.png" width="20" title="Удальть объявление @item.Type @vacancyItem.OwnerLogin от @vacancyItem.CreationDate" />
-                                        </a>
-                                    }
-                                    @if (User.IsInRole("Admin"))
-                                    {
-                                        if (!item.IsBlocked)
-                                        {
-                                            <a href='@Url.Action("BlockAnnouncement", "Announcement", new { id = item.Id, block = true })' style="margin-left:5px" onclick="return confirm('Вы уверены что желаете заблокировать объявление @item.Type от @vacancyItem.CreationDate пользователя @vacancyItem.OwnerLogin ?')">
-                                                <img src="~/Images/black-strong/Cancel.png" width="20" title="Заблокировать объявление @item.Type @vacancyItem.OwnerLogin от @vacancyItem.CreationDate" />
-                                            </a>
-                                        }
-                                        else
-                                        {
-                                            <a href='@Url.Action("BlockAnnouncement", "Announcement", new { id = item.Id, block = false })' style="margin-left:5px" onclick="return confirm('Вы уверены что желаете разблокировать объявление @item.Type от @vacancyItem.CreationDate пользователя @vacancyItem.OwnerLogin ?')">
-                                                <img src="~/Images/black-strong/Ok.png" width="20" title="Разблокировать объявление @item.Type @vacancyItem.OwnerLogin от @vacancyItem.CreationDate" />
-                                            </a>
-                                        }
-                                    }
-                                </td>
+                                }
+                                else
+                                {
+                                    <a href='@Url.Action("BlockAnnouncement", "Announcement", new { id = item.Id, block = false })' style="margin-left:5px" onclick="return confirm('Вы уверены что желаете разблокировать объявление @item.Type от @item.CreationDate пользователя @item.OwnerLogin ?')">
+                                        <img src="~/Images/black-strong/Ok.png" width="20" title="Разблокировать объявление @item.Type @item.OwnerLogin от @item.CreationDate" />
+                                    </a>
+                                }
                             }
-                        </tr>
+                        </td>
+                    </tr>
                     }
                 </tbody>
             </table>
