--- a/ElmaSecondTry/Views/Candidate/EditCandidate.cshtml
+++ b/ElmaSecondTry/Views/Candidate/EditCandidate.cshtml
@@ -92,14 +92,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IsBlocked, htmlAttributes: new { @class = "control-label col-md-3" })
-            <div class="col-md-1">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsBlocked)
-                    @Html.ValidationMessageFor(model => model.IsBlocked, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-8">
+            <div class=" col-md-offset-2 col-md-10">
                 <input type="submit" value="Сохранить" class="btn btn-success" />
             </div>
         </div>
