--- a/ElmaSecondTry/Views/Announcement/ListAnnouncement.cshtml
+++ b/ElmaSecondTry/Views/Announcement/ListAnnouncement.cshtml
@@ -16,19 +16,19 @@
             <h4>Список объявлений</h4>
             <table class="table" id="announcementstable">
                 <thead>
-                    <tr style="text-align : center">
-                        <th rowspan="2"> Тип </th>
-                        <th rowspan="2"> Дата создания </th>
-                        <th rowspan="2"> Владелец </th>
-                        <th colspan="2"> Объявление Кандидат </th>
-                        <th colspan="2"> Объявление Вакансия </th>
-                        <th rowspan="2"> Действия </th>
+                    <tr>
+                        <th rowspan="2" style="text-align:center"> Тип </th>
+                        <th rowspan="2" style="text-align:center"> Дата создания </th>
+                        <th rowspan="2" style="text-align:center"> Владелец </th>
+                        <th colspan="2" style="text-align:center"> Объявление Кандидат </th>
+                        <th colspan="2" style="text-align:center"> Объявление Вакансия </th>
+                        <th rowspan="2" style="text-align:center"> Действия </th>
                     </tr>
                     <tr>
-                        <th> Фамилия И.О. </th>
-                        <th> Профессия </th>
-                        <th> Должность </th>
-                        <th> З.плата </th>
+                        <th style="text-align:center"> Фамилия И.О. </th>
+                        <th style="text-align:center"> Профессия </th>
+                        <th style="text-align:center"> Должность </th>
+                        <th style="text-align:center"> З.плата </th>
                     </tr>
                 </thead>
                 <tbody>
