--- a/ElmaSecondTry/Views/Home/Index.cshtml
+++ b/ElmaSecondTry/Views/Home/Index.cshtml
@@ -1,31 +1,192 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
+﻿<style>
+    p {
+        text-indent: 25px;
+        text-align: justify
+    }
+</style>
+<h2>Программа кадровое агентство создано на основе тестового задания компании «Элма».</h2>
+<p>
+    <a href="#part1">Часть I. Авторизация, регистрация, просмотр и редактирование данных пользователя.</a>
+</p>
+<p>
+    <a href="#part2">Часть II. Работа пользователей с собственными объявлениями.</a>
+</p>
+<p>
+    <a href="#part3">Часть III. Работа Администратора с пользователями системы.</a>
+</p>
+<p>
+    <a href="#part4">Часть IV. Выборка подходящих объявлений.</a>
+</p>
+<br />
+<a id="part1"></a>
+<h4>Часть I. Авторизация, регистрация, просмотр и редактирование данных пользователя.</h4>
+<div class="form-horizontal">
+    <p>
+        Итак начнем описание пользовательской части программы. При запуске программы пользователю предлагается базовый интерфейс системы, в котором возможности пользователя весьма ограничены (Рис.1.1).
+    </p>
+    <div class="form-group">
+        <img src="~/Images/Base.jpg" class="col-md-12" style="border:groove" />
+        <strong style="text-align:center" class="col-md-12">  Рис.1.1 Базовый интерфейс программы с минимальными возможностями.</strong>
+    </div>
+    <p style="text-align:justify">
+        В данном интерфейсе пользователь может ознакомиться с описанием функциональности пользовательской части программы ("Пользовательска часть") и описанием структуры решения ("Структура").
+        Кроме того, пользователю доступно выполнить вход в систему (авторизоваться или зарегистрироваться, рисунки 1.2 и 1.3 соответственно)
+    </p>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <div class="form-group">
+        <img src="~/Images/Authorisation.jpg" class="col-md-offset-1 col-md-4" style="border:groove" />
+        <img src="~/Images/Registration.jpg" class="col-md-offset-2 col-md-4" style="border:groove" />
+        <strong style="text-align:center" class="col-md-6"> Рис.1.2 Форма авторизации пользователя.</strong>
+        <strong style="text-align:center" class="col-md-6"> Рис.1.3 Форма регистрации пользователя.</strong>
+    </div>
+    <p>
+        Для дальнейшего описания необходимо уточнить, что все сообщения, выводимые пользователю по средствам модального окна - это сообщения от сервера, а все остальные сообщения
+        (подтверждение действия, или текст красного цвета на форме ввода данных) - это сообщения, выводимые пользователю при обработке действия на стороне клиента.
+    </p>
+    <p>
+        При авторизации пользователю, если он уже зарегистрирован в системе, необходимо ввести логин и пароль. В случае, если пользователь ввел неверные логин и/или пароль, ему
+        при нажатии кнопки "Авторизоваться", будет предоставлено соответствующее сообщение по средствам модального окна. При успешной авторизации (с выводом соответствующего
+        сообщения), пользователь попадает в окноотображения данных собственно анкеты. На Рис.1.4 представлен интерфейс системы пользователя с максимальным уровнем доступа -
+        Администратор. Внимание!!! При ролях пользователя Employee, Jobseeker и HR, раздел "Пользователи" не доступен.
+    </p>
+    <p>
+        При регистрации нового пользователя, в случае если поля "Пароль" и "Подтверждение пароля" не совпадают, при нажатии кнопки "Зарегистрировать" пользователю будет выведено
+        сообщение об этом (надпись красным цветом под полем "Подтверждение пароля"), данная проверка выполняется на стороне клиента. В случае если при регистрации нового
+        пользователя будет введен логин, который уже существует в системе, пользователю будет выведено соответствуеющее сообщение по средствам модального окна с предупреждением.
+        Данная проверка выполняется на стороне сервера. И в том и в другом случае новый пользователь не будет зарегистрирован и ему предложат ввести новые данные для регистрации.
+        В случае успешной регистрации пользователь будет аутентифицирован, ему, как и в случае с авторизацией, будет выведено соответствующее сообщение и откроется доступ к системе
+        (Аналогично Рис.1.4). На момент регистрации роль у пользователя не определена и, соответственно, у него нет доступа ни к разделу управления пользователями (как у администратора), ни к
+        разделу поиска объявлений (как у пользователей с ролями Employee, Jobseeker, HR и Admin), поэтому единственными отличиями от незарегистрированного/неавторизованного
+        пользователя будет возможность редактировать свои аутентификационные данные, собственные данные пользователя и выход из авторизованного режима.
+    </p>
+    <div class="form-group">
+        <img src="~/Images/Admin_auth.jpg" class="col-md-12" style="border:groove" />
+        <strong style="text-align:center" class="col-md-12">  Рис.1.4 Интерфейс авторизованного/зарегистрированного пользователя на примере Администратора.</strong>
+    </div>
+    <p>
+        Небольшое дополнение: в случае, если у пользователя уже имеются объявления, соответствующие его роли, они будут также представлены в нижней части этого окна (Рис 1.5).
+        В этом же окне доступны иконки для добавления новых объявлений, но об этом более подробно в Части II данного описания.
+    </p>
+    <div class="form-group">
+        <img src="~/Images/HR_example.jpg" class="col-md-12" style="border:groove" />
+        <strong style="text-align:center" class="col-md-12"> Рис.1.5 Пример отображения пользователя в роли "HR" с объявлениями.</strong>
+    </div>
+    <p>
+        Для получения возможности воспользоваться функциями системы, ВНОВЬ ЗАРЕГИСТРИРОВАННОМУ пользователю необходимо отредактировать данные собственной анкеты , в частности указать роль, в которой он
+        желает воспользоваться функциями системы.  При успешной авторизации или регистрации в системе, пользователю представляется окно с данными собственной анкеты (также это окно
+        доступно из любой части программы нажатием на свой логин (в правом верхнем углу любой отображаемой страницы).
+        Аналогичное окно досупно всем пользователям при просмотре данных других пользователей. Для работы с собственной анкетой, пользователю доступен ряд иконок в правой части окна
+        просмотра данных. Соответственно пользователь может отредактировать собственную анкету или удалить ее из системы. При удалении анкеты из системы пользователю будет выведено
+        окно подстверждения действия и, при соответствующем подтверждении, анкета пользователя будет удалена со всеми объявлениями. Редактирование анкеты доступно по нажатию
+        соответствующей иконки, после чего пользователь попадает в окно редактирования данных своей анкеты (Рис.1.6). В данном окне пользователь может внести свои данные и указать роль.
+        Стоит заметить, что при редактировании собственной анкеты, пользователю недоступно установить себе роль Администратора. <strong style="color:red">Данную роль пользователю могут устанавливать только Администраторы.</strong>
+    </p>
+    <div class="form-group">
+        <img src="~/Images/None_auth.jpg" class="col-md-12" style="border:groove" />
+        <strong style="text-align:center" class="col-md-12"> Рис.1.6 Редактирование анкеты с выбором роли.</strong>
+    </div>
+
+</div>
+<a id="part2"></a>
+<h4>Часть II. Работа пользователей с собственными объявлениями.</h4>
+<div class="form-horizontal">
+    <p>
+        Описание данной части, наверно, стоит начать с того, что на рисунке 1.5 видно, что в окне отображения информации о пользователе присутствует список существующих у пользователя объявлений.
+        В данном списке могут присутствовать объявления разных типов с отображением краткой информации объявления. В последней колонке, также доступен ряд действий, которые может производить
+        пользователь с данным объявлением. К примеру можно просмотреть информацию объявления (Рис.2.1), отредактировать объявление или удалить объявление. Важной особенностью является то, что пользователь
+        может редактировать и удалять только свои собственные объявления, а по чужим объявлениям может только просматривать соответствующую информацию. Пользователь в роли Администратор может
+        редактировать и удалять любые объявления любых пользователей, а так же имеет право заблокировать объявление или разблокировать ранее заблокированное объявление. Данная функция может
+        являться инструментом цензуры для администратора (Рис.2.2).
+    </p>
+    <div class="form-group">
+        <img src="~/Images/Show_candidate.jpg" class="col-md-12" style="border:groove" />
+        <strong style="text-align:center" class="col-md-12"> Рис.2.1 Информация объявления типа кандидат.</strong>
+    </div>
+    <div class="form-group">
+        <img src="~/Images/Admin_announcement.jpg" class="col-md-12" style="border:groove" />
+        <strong style="text-align:center" class="col-md-12"> Рис.2.2 Окно отображения информации пользователя для Администратора.</strong>
+    </div>
+    <p>
+        Заблокированные объявления не видны другим пользователям, т.е. они видны только собственнику объявления и пользователям в роли "Admin". В данном окне, также имеется возможность
+        добавлять объявления в зависимости от роли. Если пользователь в роли "HR", то ему доступны объявления как кандидатов так и вакансий, пользователям "Employee" доступны объявления только
+        вакансий, соответственно пользователям "Jobseeker" доступны только объявления кандидатов. Пользователям "None" и "Admin" не доступен никакой тип объявлений. Пользователь видит только соответствующие его правам иконки.
+    </p>
+    <p>
+        Для создания объявления необходимо нажать на соответствующую иконку в нижней части окна, в котором отображается информация пользователя с его объявлениями (ниже таблички с объявлениями).
+        После чего пользователю откроется соответствующее окно для создания нового объявления, в которое необходимо ввести основные данные. Вид окон для создания объявлений представлен на Рис.2.3 и Рис.2.4.
+    </p>
+    <div class="form-group">
+        <img src="~/Images/New_vacancy.jpg" class="col-md-offset-1 col-md-4" style="border:groove" />
+        <img src="~/Images/New_candidate.jpg" class="col-md-offset-2 col-md-4" style="border:groove" />
+        <strong style="text-align:center" class="col-md-6"> Рис.2.3 Окно создания объявления вакансии.</strong>
+        <strong style="text-align:center" class="col-md-6"> Рис.2.4 Окно создания объявления кандидата.</strong>
+    </div>
+    <p>
+        После создания объявления, оно доступно в списке объявлений пользователя и участвует в выборке (Раздел IV данного описания). Также после создания объявления его можно 
+        редактировать нажатием соответствующей иконки. Форма редактирования аналогична форме создания и в данном описании не отображена.
+    </p>
+
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<a id="part3"></a>
+<h4>Часть III. Работа Администратора с пользователями системы.</h4>
+<div class="form-horizontal">
+    <p>
+        Итак работа с пользователями. Раздел работы с пользователями доступен только администратору. Только пользователь в роли Администратор может выполнять выборку пользователей по
+        определенным параметрам, редактировать и удалять других пользователей (в том числе и других администраторов). При нажати на соответствующую ссылку "Пользователи",
+        администратор попадает в окно выборки (Рис 3.1) где может ввести некоторые параметры и выполнить выборку пользователей из системы. Выборку пользователей можно производить по
+        таким параметрам, как дата регистрации пользователя (указывается минимальное и максимальное значение когда пользователь мог быть зарегистрирован), а также по другим полям,
+        куда можно вводить полные или частичные соответствующие значения.
+    </p>
+    <div class="form-group">
+        <img src="~/Images/Users_filter.jpg" class="col-md-12" style="border:groove" />
+        <strong style="text-align:center" class="col-md-12"> Рис.3.1 Окно параметров выборки пользователей.</strong>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <p>
+        Пример выборки по частичному параметру "Наименование" представлен на Рис. 3.2. Результат выборки представляется в табличном виде в нижней части этого же окна.
+        куда можно вводить полные или частичные соответствующие значения.
+    </p>
+    <div class="form-group">
+        <img src="~/Images/Users_filter_result.jpg" class="col-md-12" style="border:groove" />
+        <strong style="text-align:center" class="col-md-12"> Рис.3.2 Результат выборки по части наименования "Рог".</strong>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <p>
+        В таблице результатов выборки представлены все пользователи, найденные по данным параметрам. Помимо вывода краткой информации по пользователям, для каждого пользователя
+        доступен ряд действий: Просмотр данных, Редактирование данных и Удаление пользователя. При нажатии на которые, пользователь (администратор) попадает в соответствующие окна. При нажатии
+        на заголовки таблицы происходит сортировка данных по возрастанию/убыванию соответствующей колонки. 
+    </p>
+
+
+</div>
+
+<a id="part4"></a>
+<h4>Часть IV. Выборка подходящих объявлений.</h4>
+<div class="form-horizontal">
+    <p>
+        В соответствующих ролях пользователям доступна функция выборки из базы данных объявлений по различным параметрам (Рис.1.4). При переходе по данной ссылке пользователю
+        представляется окно для ввода параметров фильтрации объявлений. (Рис.4.1 на примере пользователя в роли "Admin") в зависимости от роли пользователя.
+    </p>
+
+    <div class="form-group">
+        <img src="~/Images/Select_announcement.jpg" class="col-md-12" style="border:groove" />
+        <strong style="text-align:center" class="col-md-12"> Рис.4.1 Окно выборки объявлений на примере пользователя в роли "Admin".</strong>
     </div>
+    <p>
+        При выборке объявлений пользователям в других ролях, некоторые элементы представленного окна недоступны. В частности: поле "Статус объявления" раздела "Общие параметры"
+        доступно только пользователям в роли Администратор. Раздел "Параметры выборки кандидатов" доступен только пользователям Employee и HR. Раздел "Параметры выборки вакансий"
+        доступен пользователям "Jobseeker" и "HR". Для уменьшения "захламленности" видимой области окна неиспользуемые разделы можно свернуть нажатием на соответствующие иконки слева.
+        Также можно поставить/убрать "галочки" если пользователь (например в роли "HR" или "Admin") выбирает только определенный тип объявлений. При нажатии "Показать результат"
+        все разделы с параметрами поиска сворачиваются с целью освободить место для результатов выборки. Пример результатов выборки представлен на Рис 4.2
+    </p>   
+    <div class="form-group">
+        <img src="~/Images/Select_result.jpg" class="col-md-12" style="border:groove" />
+        <strong style="text-align:center" class="col-md-12"> Рис.4.2 Результат выборки объявлений.</strong>
+    </div>
+    <p>
+        В результате выборки пользователю представлен перечень объявлений различного типа с возможными действиями с данным объявлениемЖ Просмотр информации, Редактирование объявления,
+        Удаление объявления и Заблокировать/разблокировать объявление (последнее - только для пользователя в роли Администратор). В данном окне так же пользователь может просматривать 
+        все объявления а редактировать и удалять - только свои (Администраторы могут ВСЁ!).
+    </p>
+    <br/>
+    <h4> Рекомендую ознакомиться с разделом "Структура", где описывается структура кода данного проекта. Благодарю за внимание!</h4>
 </div>
