--- a/ElmaSecondTry/Views/User/ShowListUsers.cshtml
+++ b/ElmaSecondTry/Views/User/ShowListUsers.cshtml
@@ -14,14 +14,14 @@
         <table class="table" id="userstable" style="text-align:center">
             <thead>
                 <tr>
-                    <th>@Html.DisplayNameFor(model => model.Login)</th>
-                    <th>@Html.DisplayNameFor(model => model.Role)</th>
-                    <th>@Html.DisplayNameFor(model => model.Name)</th>
-                    <th>@Html.DisplayNameFor(model => model.About)</th>
-                    <th>@Html.DisplayNameFor(model => model.Phone)</th>
-                    <th>@Html.DisplayNameFor(model => model.Email)</th>
-                    <th>@Html.DisplayNameFor(model => model.RegisterDate)</th>
-                    <th> Действия </th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Login)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Role)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Name)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.About)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Phone)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Email)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.RegisterDate)</th>
+                    <th style="text-align:center"> Действия </th>
                 </tr>
             </thead>
             <tbody>
